--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,31 @@ html {
     scroll-behavior: smooth;
 }
 
+.top {
+    position: fixed;
+    bottom: 5vh;
+    right: 5vw;
+    background-color: #005f30;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    z-index: 12;
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top img {
+    width: 60%;
+    height: 60%;
+}
+
+.top:hover {
+    background-color: rgb(7, 134, 47);
+}
+
 /* Setting up the base font and body background */
 body {
     background: linear-gradient(135deg, #f0fdf4, #e6fffa);
@@ -495,6 +520,19 @@ body {
 .festival-image {
     height: 200px;
     overflow: hidden;
+    position: relative;
+}
+
+.festival-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 57, 51, 0.5);
+    filter: opacity(0.8);
+    z-index: 1;
 }
 
 .festival-image img {
